k8s/deployment.backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ios-capstone-backend
  labels:
    app: ios-capstone-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ios-capstone-backend
  template:
    metadata:
      labels:
        app: ios-capstone-backend
    spec:
      imagePullSecrets:
        - name: __PULL_SECRET__
      containers:
        - name: ios-capstone-backend
          image: __IMAGE_BACKEND__:__IMAGE_TAG__
          command: ["/app/manage/docker-entrypoint.sh"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: 2048Mi
              cpu: "0.5"
          volumeMounts:
            - name: www-data
              mountPath: /www_data
      volumes:
        - name: www-data
          hostPath:
            path: __WWW_DATA_PATH__
